<resources>
    <string name="app_name">Gifiks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login_fragment_label">Login</string>
    <string name="Upload_fragment_label">Upload Gif</string>
    <string name="Create_Account_fragment_label">Create Account</string>
    <string name="Gif_Detail_fragment_label">Gif</string>
    <string name="Gallery_fragment_label">Gallery</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="AddGif">AddGif</string>
    <string name="title_activity_create_account">activity_create_account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="create_new_account">Create new account</string>
    <string name="title_activity_login_page">LoginPageActivity</string>
    <string name="create_account">create account</string>
    <string name="gifiks">Gifiks</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="upload_gif">Upload gif</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="homeBtn">Home</string>
    <string name="upload">Upload</string>
    <string name="profilebtn">Profile</string>
    <string name="logoout">logoout</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="gif_name">Gif Name</string>
    <string name="gif_name_area">Gif Name:</string>
    <string name="by_user">By User:</string>
    <string name="user_name">User Name</string>
    <string name="comments">Comments</string>
    <string name="enter_a_comment">Enter a Comment</string>
    <string name="comment">comment</string>
</resources>