<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.gifiks.LoginPage"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/activity_login_page">

        <action
            android:id="@+id/action_to_HomePageFragment"
            app:destination="@id/HomePageFragment" />
        <action
            android:id="@+id/action_to_CreateAccountFragment"
            app:destination="@id/CreateAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/UploadGifFragment"
        android:name="com.example.gifiks.UploadGif"
        android:label="@string/Upload_fragment_label"
        tools:layout="@layout/upload_gif">

        <action
            android:id="@+id/action_to_HomePageFragment"
            app:destination="@id/HomePageFragment" />
    </fragment>
    <fragment
        android:id="@+id/CreateAccountFragment"
        android:name="com.example.gifiks.CreateAccount"
        android:label="@string/Create_Account_fragment_label"
        tools:layout="@layout/activity_create_account">
        <action
            android:id="@+id/action_to_HomePageFragment"
            app:destination="@id/HomePageFragment" />
    </fragment>
    <fragment
        android:id="@+id/HomePageFragment"
        android:name="com.example.gifiks.HomePage"
        android:label="@string/gifiks"
        tools:layout="@layout/activity_home_page">
        <action
            android:id="@+id/action_to_UploadGifFragment"
            app:destination="@id/UploadGifFragment" />
        <action
            android:id="@+id/action_to_ProfilePageFragment"
            app:destination="@id/ProfilePageFragment" />
    </fragment>
    <fragment
        android:id="@+id/ProfilePageFragment"
        android:name="com.example.gifiks.ProfilePage"
        android:label="ProfilePage"
        tools:layout="@layout/activity_profile_page">
        <action
            android:id="@+id/action_to_UploadGifFragment"
            app:destination="@id/UploadGifFragment" />
        <action
            android:id="@+id/action_to_HomePageFragment"
            app:destination="@id/HomePageFragment" />
        <action
            android:id="@+id/action_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
</navigation>